Bone shape size becomes small after view3d.view_all operator. #88375

Closed
opened 2021-05-18 17:35:46 +02:00 by Demeter Dzadik · 7 comments
Member

System Information
Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-18 10:57, hash: 4402c3006b
Worked: Probably related to D10974?

Caused by fc5bf09fd8

Short description of error
As per 2.7 fashion, I have the Frame All operator bound to Shift+C. It seems that running this operator causes bone shapes to display smaller until a bone is moved. Then they restore to the correct size.

Exact steps for others to reproduce the error

**System Information** Operating system: Linux-5.8.0-7642-generic-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.56 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-18 10:57, hash: `4402c3006b` Worked: Probably related to [D10974](https://archive.blender.org/developer/D10974)? Caused by fc5bf09fd8 **Short description of error** As per 2.7 fashion, I have the Frame All operator bound to Shift+C. It seems that running this operator causes bone shapes to display smaller until a bone is moved. Then they restore to the correct size. **Exact steps for others to reproduce the error** - [bone_size_changes_on_reset_cursor.blend](https://archive.blender.org/developer/F10123124/bone_size_changes_on_reset_cursor.blend) - Run the Frame All operator - Bone shapes should now look smaller - Make any transformation - Bone shapes bounce back to normal
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Yeah, caused by fc5bf09fd8

Also wasnt aware that this was compatibility-breaking commit, just noting that opening that file in version prior to fc5bf09fd8 will have the bone at zero scale.

Yeah, caused by fc5bf09fd8 Also wasnt aware that this was compatibility-breaking commit, just noting that opening that file in version prior to fc5bf09fd8 will have the bone at zero scale.
Member

Marking as High prio since it is a regression.

Marking as High prio since it is a regression.
Wayde Moss self-assigned this 2021-05-20 20:12:27 +02:00

This issue was referenced by 9c4ecef62f

This issue was referenced by 9c4ecef62f783156ab01904a6ead6b6eac23e7bf
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88375
No description provided.